--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <title>momentum</title>
 </head>
 <body>
+  <div class="modal hidden">
+    <div class="modal_container">
+      <p class="modal_title"></p>
+      <div class="modal_input_container">
+        <input class="modal_input" type="text">
+        <div class="modal_btn">OK</div>
+      </div>
+    </div>
+  </div>
   <header class="header">
     <div class="player">
       <div class="player-controls">
@@ -63,7 +72,6 @@
         <div class="icon-container">
           <div class="setting-icon"></div>
           <a href="https://github.com/Valeriy95"><img class="github-icon" src="assets/svg/icons8-github-30 (2).png" alt="github"></a>
-          <a href="https://rs.school/js/"><img class="rss-icon" src="assets/svg/rs_school_js.svg" alt="github"></a>
           <p class="year">2023</p>
         </div>
         <div class="setting-container">
